# GlucoPatrol

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
code/: controller_all.py  main_1_preprocessor.py  main_2_featureExtractor.py  main_3_featureCleaner.py  main_4_FL_Template.py
code/archive/: controller_1_PP.py  controller_2_FE.py  controller_3_FC.py
code/config/: class_config.yaml  class_config.yaml.example  config.py
code/feature_engineering/: feature_cleaner.py  feature_extractor.py  feature_selector.py
code/model_training/: model_trainer_FL.py  model_trainer_FL_old.py  model_trainer_XGB.py
code/preprocessing/: data_loader.py  data_segmenter.py  signal_processor.py
code/utils/: import_classes.py  setup_folders.py  utils.py
features/0_raw/: feature_df_10_300.pkl  feature_df_11_300.pkl  feature_df_12_300.pkl  feature_df_13_300.pkl  feature_df_14_300.pkl  feature_df_15_300.pkl  feature_df_16_300.pkl  feature_df_1_300.pkl  feature_df_2_300.pkl  feature_df_3_300.pkl  feature_df_4_300.pkl  feature_df_5_300.pkl  feature_df_6_300.pkl  feature_df_7_300.pkl  feature_df_8_300.pkl  feature_df_9_300.pkl
features/1_clean/: clean_feature_df_10_300.pkl  clean_feature_df_11_300.pkl  clean_feature_df_12_300.pkl  clean_feature_df_13_300.pkl  clean_feature_df_14_300.pkl  clean_feature_df_15_300.pkl  clean_feature_df_16_300.pkl  clean_feature_df_1_300.pkl  clean_feature_df_2_300.pkl  clean_feature_df_3_300.pkl  clean_feature_df_4_300.pkl  clean_feature_df_5_300.pkl  clean_feature_df_6_300.pkl  clean_feature_df_7_300.pkl  (+2 more)
(+211 files in other folders)
