[project]
name = "GlucoPatrol"
version = "0.1.0"
description = "Non-invasive blood glucose estimation pipeline using wearable data"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "xgboost",
    "joblib"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
